modules/cluster/ecs.tf
/*
data "template_file" "cb_bot" {
  template = file(var.taskdef_template)
  vars = {
    app_image      = local.app_image
    app_port       = var.app_port
    #aws_region     = var.aws_region
    env            = var.environment
    app_name       = var.app_name
    image_tag      = var.image_tag
  }
}
*/
resource "aws_ecs_cluster" "aws-ecs-cluster" {
  depends_on = [
    aws_ecs_capacity_provider.capacity_provider
  ]
  name = "${var.app_name}-${var.environment}-cluster"
  capacity_providers = [aws_ecs_capacity_provider.capacity_provider.name]
  tags = {
    Name = "${var.app_name}-${var.environment}-cluster"
  }
}

resource "aws_ecs_task_definition" "aws-ecs-task" {
  family = "${var.app_name}-${var.environment}-task"
  #execution_role_arn       = aws_iam_role.ecsTaskExecutionRole.arn
  #task_role_arn            = aws_iam_role.ecsTaskExecutionRole.arn
  #container_definitions    = data.template_file.cb_bot.rendered
  container_definitions     = jsonencode(
[
  {
    "name": "${var.app_name}-${var.environment}-container",
    "image": "${local.app_image}",
    "essential": true,
    "memory": 512,
    "cpu": 256,
    
    "portMappings": [
      {
        "containerPort": var.app_port,
        "hostPort": var.app_port
      }
    ]
  }
])

}


resource "aws_ecs_service" "main" {
  depends_on = [aws_alb_listener.listener, aws_iam_role.ecsTaskExecutionRole]
  name            = "${var.app_name}-${var.environment}-service"
  cluster         = aws_ecs_cluster.aws-ecs-cluster.id
  task_definition = aws_ecs_task_definition.aws-ecs-task.arn
  desired_count   = 2
  #launch_type     = "EC2"


  capacity_provider_strategy {
    capacity_provider = aws_ecs_capacity_provider.capacity_provider.name
    weight = 1
    base = 0
  }
  load_balancer {
    target_group_arn = aws_alb_target_group.target_group.arn
    container_name   = "${var.app_name}-${var.environment}-container"
    container_port   = var.app_port
  }
}

resource "aws_ecs_capacity_provider" "capacity_provider" {
  name = "${var.app_name}-${var.environment}-capacity_provider"

  auto_scaling_group_provider {
    auto_scaling_group_arn         = aws_autoscaling_group.autoscale.arn
    managed_termination_protection = "DISABLED"

    managed_scaling {
      maximum_scaling_step_size = 4
      minimum_scaling_step_size = 2
      status                    = "ENABLED"
      target_capacity           = 10
    }
  }
}
